created logic for highscore page

--- a/index.html
+++ b/index.html
@@ -78,11 +78,15 @@
                 <div class="row">
                     <table class="table">
                         <tr>
-                            <th>initials</th>
-                            <th>score</th>
-                        </tr>
+                            <th>Name</th>
+                            <th>Score</th>
+                        </tr>  
                     </table>
                 </div>
+            
+                <div class="col-sm-12 text-center" id="nextDiv">
+                    <button class="text-center rounded" id="restart">restart</button>
+                </div>    
             </div>
 
             <div class="col-sm-3"></div>
@@ -94,3 +98,5 @@
     <script src="./script.js"></script>
 </body>
 </html>
+
+
