fixed timer and added a clear scores button

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
                     </table>
                 </div>
             
-                <div class="col-sm-12 text-center" id="nextDiv">
+                <div class="col-sm-12 text-center">
                     <button class="text-center rounded" id="restart">restart</button>
+                    <button class="text-center rounded" id="clear">clear scores</button>
                 </div>    
             </div>
 
